force-app/main/default/objects/Unit_Master__c/Unit_Master__c.object-meta.xml
<CustomObject>
    <label>Unit Master</label>
    <nameField>
        <label>Unit Master  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>