force-app/main/default/objects/Unit_Master__c/fields/Conversion_Base_Unit__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Base_Unit__c</fullName>
    <label>Conversion Base Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>