force-app/main/default/objects/Unit_Master__c/fields/Unit_Category__c.field-meta.xml
<CustomField>
    <fullName>Unit_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Category</label>
    <referenceTo>Unit_Category__c</referenceTo>
    <relationshipLabel>Unit Masters</relationshipLabel>
    <relationshipName>Unit_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>